--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file=.env --watch index.js"
+    "dev": "node --env-file=backend/.env --watch index.js"
   },
   "author": "Momen Shekh (MS)",
   "license": "ISC",
