--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file=backend/.env --watch index.js"
+    "dev": "nodemon --env-file=backend/.env index.js"
   },
   "author": "Momen Shekh (MS)",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.1",
+    "nodemon": "^3.1.10"
   }
 }
