--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Momen Shekh (MS)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "mongoose": "^8.19.2"
